@@ -39,6 +39,7 @@ module ActiveMerchant #:nodoc:
     # * Anda
     # * Creditos directos (Tarjeta D)
     # * Panal
+    # * Verve
     #
     # For testing purposes, use the 'bogus' credit card brand. This skips the vast majority of
     # validations, allowing you to focus on your core concerns until you're ready to be more concerned
@@ -132,6 +133,7 @@ module ActiveMerchant #:nodoc:
       # * +'anda'+
       # * +'tarjeta-d'+
       # * +'panal'+
+      # * +'verve'+
       #
       # Or, if you wish to test your implementation, +'bogus'+.
       #
